@@ -194,6 +194,8 @@ inline bool Rbyte_to_bool(Rbyte x){ return x != static_cast<Rbyte>(0) ; }
 
 // DO NOT CHANGE THE ORDER OF THESE INCLUDES
 #include <Rcpp/traits/integral_constant.h>
+#include <Rcpp/traits/same_type.h>
+#include <Rcpp/traits/is_convertible.h>
 #include <Rcpp/traits/has_iterator.h>
 #include <Rcpp/traits/has_na.h>
 #include <Rcpp/traits/storage_type.h>
@@ -204,7 +206,6 @@ inline bool Rbyte_to_bool(Rbyte x){ return x != static_cast<Rbyte>(0) ; }
 
 #include <Rcpp/internal/caster.h>
 #include <Rcpp/internal/r_vector.h>
-#include <Rcpp/internal/convertible.h>
 #include <Rcpp/r_cast.h>
 
 #include <Rcpp/internal/export.h>
